src/objects/SurveyIndividualAnswer__c.object
<CustomObject>
    <fields>
        <fullName>Number_Response__c</fullName>
        <label>Number Response</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_ClickTools_Response__c</fullName>
        <label>Raw ClickTools Response</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey2__c</fullName>
        <formula>Survey_Feedback__r.Survey2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyIndividualQuestion__c</fullName>
        <label>Survey Individual Question</label>
        <referenceTo>SurveyIndividualQuestion__c</referenceTo>
        <relationshipLabel>Survey Individual Answers</relationshipLabel>
        <relationshipName>Survey_Individual_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Feedback__c</fullName>
        <label>Survey Feedback</label>
        <referenceTo>SurveyFeedback__c</referenceTo>
        <relationshipLabel>Survey Individual Answers</relationshipLabel>
        <relationshipName>Survey_Individual_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Response__c</fullName>
        <label>Text Response</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey Individual Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Question_Number__c</columns>
        <columns>Survey_Feedback__c</columns>
        <columns>SurveyIndividualQuestion__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SIA-{0000}</displayFormat>
        <label>Survey Individual Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Individual Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>